--- a/caseStudy/ui/package.json
+++ b/caseStudy/ui/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "highcharts": "5.0.11",
+    "jquery": "^3.4.1",
     "moment": "^2.18.1",
     "react": "^15.3.2",
     "react-bootstrap-typeahead": "^1.3.0",
